Skeleton for Redcap integration

--- a/redox_order/redox-api.config
+++ b/redox_order/redox-api.config
@@ -1,6 +1,7 @@
 [REDOX]
 REDOX_API_KEY = <Redox API Key>
 REDOX_API_SECRET = <Redox API Key Secret>
+WAIT_BEFORE_ORDER_QUERY_SECONDS = 60
 
 [REDCAP]
 LOCAL_REDCAP_URL = <URL for REDCap API>
