--- a/redox_order/redox-api.config
+++ b/redox_order/redox-api.config
@@ -1,4 +1,5 @@
 [REDOX]
+BASE_URL = https://api.redoxengine.com
 REDOX_API_KEY = <Redox API Key>
 REDOX_API_SECRET = <Redox API Key Secret>
 WAIT_BEFORE_ORDER_QUERY_SECONDS = 60
@@ -6,3 +7,9 @@ WAIT_BEFORE_ORDER_QUERY_SECONDS = 60
 [REDCAP]
 LOCAL_REDCAP_URL = <URL for REDCap API>
 LOCAL_REDCAP_API_KEY = <REDCap API Key>
+
+[ORDER]
+FACILITY_CODE = <Site specific facility code>
+PROVIDER_NPI =
+PROVIDER_NAME_FIRST =
+PROVIDER_NAME_LAST =
