Send email notifications when warnings are logged

--- a/redox_order/redox-api.config
+++ b/redox_order/redox-api.config
@@ -13,3 +13,9 @@ FACILITY_CODE = <Site specific facility code>
 PROVIDER_NPI =
 PROVIDER_NAME_FIRST =
 PROVIDER_NAME_LAST =
+
+[EMAIL]  # To notify of issues
+SMTP_HOST = localhost
+SMTP_PORT = 25
+FROM_ADDR = sender@email.com
+TO_ADDRS = a@b.com;c@d.com  # separate emails with ;
