Add pyodbc to requirements.txt, and default R4 URL to config_template.ini

--- a/gira_clinical_data_upload/config_template.ini
+++ b/gira_clinical_data_upload/config_template.ini
@@ -4,7 +4,7 @@ LOCAL_REDCAP_URL = <URL for REDCap API>
 LOCAL_REDCAP_API_KEY = <REDCap API Key>
 
 [R4]
-R4_URL = <URL for REDCap API>
+R4_URL = https://redcap.vanderbilt.edu/api/
 R4_API_KEY = <REDCap API Key>
 
 [OMOP]
