--- a/redox_order/redox-api.config
+++ b/redox_order/redox-api.config
@@ -1,3 +1,6 @@
+[GENERAL]
+DEVELOPMENT = True
+
 [REDOX]
 BASE_URL = https://api.redoxengine.com
 REDOX_API_KEY = <Redox API Key>
@@ -7,12 +10,6 @@ WAIT_BEFORE_ORDER_QUERY_SECONDS = 60
 [REDCAP]
 LOCAL_REDCAP_URL = <URL for REDCap API>
 LOCAL_REDCAP_API_KEY = <REDCap API Key>
-
-[ORDER]
-FACILITY_CODE = <Site specific facility code>
-PROVIDER_NPI =
-PROVIDER_NAME_FIRST =
-PROVIDER_NAME_LAST =
 
 [EMAIL]  # To notify of issues
 SMTP_HOST = localhost
