Add configuration option for development environment. For missing patient data, fill in missing allergy and DOB, and copy name

--- a/gira_clinical_data_upload/config_template.ini
+++ b/gira_clinical_data_upload/config_template.ini
@@ -1,4 +1,7 @@
 # This is a template configuration file. Please copy to config.ini and populate the values
+[GENERAL]
+DEVELOPMENT = False
+
 [REDCAP]
 LOCAL_REDCAP_URL = <URL for REDCap API>
 LOCAL_REDCAP_API_KEY = <REDCap API Key>
