Add AOE questions to API order. Retrieve MeTree JSON from R4.

--- a/redox_order/redox-api.config
+++ b/redox_order/redox-api.config
@@ -11,6 +11,10 @@ WAIT_BEFORE_ORDER_QUERY_SECONDS = 60
 LOCAL_REDCAP_URL = <URL for REDCap API>
 LOCAL_REDCAP_API_KEY = <REDCap API Key>
 
+[R4]
+R4_URL = https://redcap.vanderbilt.edu/api/
+R4_API_KEY = <R4 API Key>
+
 [EMAIL]  # To notify of issues
 SMTP_HOST = localhost
 SMTP_PORT = 25
